Changed page routing structure

--- a/public/views/dashboard.html
+++ b/public/views/dashboard.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
-<title>Lecture Planning tool</title>
+<title>Unit Planning tool</title>
 <script src="https://apis.google.com/js/platform.js" async defer></script>
+<script src="https://togetherjs.com/togetherjs-min.js"></script>
 <meta name="google-signin-client_id" content="777537472432-8qni684qbrq6j911t6e2s94qo8kp6fia.apps.googleusercontent.com">
 <link rel="stylesheet" href="styles.css">
 <link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
 
 <header>
     <ul>
-        <li id="headerTitle"><h1>Lecture Planning Tool</h1></li>
+        <li id="headerTitle"><h1>Unit Planning Tool</h1></li>
         <li class="navButtons"><a id="signOut" href="" onclick="signOut();">Logout</a></li>
         <li class="navButtons"><img src="" id="userPhoto" /></li>
     </ul>
@@ -16,6 +17,7 @@
 <div id="sidebar">
     <ul id="sideList">
         <li id="sideTitle"><h2>My Units</h2></li>
+        <li><a onclick="TogetherJS(this); return false;">Collaborate</a></li>
     </ul>
 </div>
 
@@ -28,4 +30,4 @@
     <p>805988 WEBSCRIPT COUSEWORK</p>
 </footer>
 
-<script src="client.js"></script>
+<script src="../client.js"></script>
