--- a/public/styles.css
+++ b/public/styles.css
@@ -82,10 +82,12 @@ header ul li {
     background-color: rgba(255, 255, 255, 0.4) ;
 }
 
-.g-singin2{
-    margin-left: auto;
-    margin-right: auto;
-    width: 100%
+.g-signin2{
+  width: 100%;
+}
+
+.g-signin2 > div{
+  margin: 0 auto;
 }
 
 #sidebar{
