--- a/public/views/index.html
+++ b/public/views/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<title>U-Planer</title>
+<title>UPlaner</title>
 <script src="https://apis.google.com/js/platform.js" async defer></script>
 <script src="https://togetherjs.com/togetherjs-min.js"></script>
 <meta name="google-signin-client_id" content="777537472432-8qni684qbrq6j911t6e2s94qo8kp6fia.apps.googleusercontent.com">
@@ -9,7 +9,7 @@
 <div id="layoutGrid">
     <header>
         <ul>
-            <li id="headerTitle"><h1>U-Planner</h1></li>
+            <li id="headerTitle"><h1>UPlanner</h1></li>
         </ul>
     </header>
 
