--- a/public/styles.css
+++ b/public/styles.css
@@ -18,7 +18,7 @@ body{
   grid-template-areas:
     "header header header"
     "nav content cpntent"
-    "nav footer footer";
+    "footer footer footer";
 
   grid-template-columns: 200px 1fr 200px;
   grid-template-rows: 5em 1fr auto;
@@ -40,12 +40,12 @@ header {
 #headerTitle{
     text-align: center;
     vertical-align: middle;
-
     color: #5E225F;
     padding: 0em 0.5em;
     float: left;
     margin: auto;
     display: inline-block;
+
 }
 
 header ul {
@@ -64,7 +64,7 @@ header ul li {
 
 .navButtons{
     height: 4.8em;
-    width: 5em;
+    min-width: 120px;
     float: right;
     display: block;
     text-align: center;
@@ -76,12 +76,45 @@ header ul li {
     background-color: #1179B5;
 }
 
+#userPhoto{
+    border-radius: 50%;
+    height: inherit;
+}
+
+/* Show the dropdown menu on hover */
+.userMenu:hover .userMenu-content {
+    display: block;
+}
+
+/* Dropdown Content (Hidden by Default) */
+.userMenu-content {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 100px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+    right: 0;
+    top: 5em;
+}
+
+/* Links inside the dropdown */
+.userMenu-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    vertical-align: middle;
+    display: block;
+    height: 3em;
+    line-height: 3em
+}
 
 #sidebar {
   grid-area: nav;
   margin: 0;
   border-right: solid;
   background-color: rgba(0,0,0,0.1);
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
 }
 #sideList{
     padding: 0;
@@ -96,7 +129,7 @@ header ul li {
     height: 3em;
     box-sizing: content-box;
     border-bottom: solid;
-    line-height: 2.5em
+
 }
 
 #sideList li:hover{
@@ -122,7 +155,8 @@ header ul li {
     margin-top: 5em;
     margin-left: auto;
     margin-right: auto;
-    background-color: rgba(255, 255, 255, 0.4) ;
+    background-color: rgba(255, 255, 255, 0.5);
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
 }
 
 .g-signin2{
