added main content grid

--- a/public/views/dashboard.html
+++ b/public/views/dashboard.html
@@ -23,9 +23,7 @@
 
     <div id="sidebar">
         <ul id="sideList">
-            <li id="sideTitle">
-                <h2>My Units</h2>
-                <li>
+            <li><h2>My Units</h2><li>
                     <select>
                         <option value="">Webscript</option>
                         <option value="saab">Webfun</option>
@@ -34,11 +32,13 @@
                     </select>
                 </li>
             </li>
-            <li id="sideTitle">Topics</li>
+            <li id="sideTitle"><h2>Topics</h2></li>
         </ul>
     </div>
-    <div id="mainContent">
-
+    <div id="mainContentGrid">
+        <div id="unitInfo" class="contentBox">
+            Unit Info
+        </div>
     </div>
 
 
