--- a/public/styles.css
+++ b/public/styles.css
@@ -16,12 +16,12 @@ body{
   display: grid;
 
   grid-template-areas:
-    "header header header"
-    "nav content cpntent"
-    "footer footer footer";
+    "header header"
+    "nav content"
+    "footer footer";
 
-  grid-template-columns: 200px 1fr 200px;
-  grid-template-rows: 5em 1fr auto;
+  grid-template-columns: 200px 1fr;
+  grid-template-rows: 5em 1fr;
   margin: 0;
   padding: 0;
   height: 100vh;
@@ -81,24 +81,23 @@ header ul li {
     height: inherit;
 }
 
-/* Show the dropdown menu on hover */
 .userMenu:hover .userMenu-content {
     display: block;
 }
 
-/* Dropdown Content (Hidden by Default) */
 .userMenu-content {
     display: none;
     position: absolute;
     background-color: #f9f9f9;
     min-width: 100px;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    border-radius: 15px;
     z-index: 1;
     right: 0;
     top: 5em;
+    border: solid;
 }
 
-/* Links inside the dropdown */
 .userMenu-content a {
     color: black;
     padding: 12px 16px;
@@ -118,7 +117,9 @@ header ul li {
 }
 #sideList{
     padding: 0;
+    margin: 0;
     width: inherit;
+    line-height: 2em
 }
 
 #sideList li{
@@ -141,22 +142,38 @@ header ul li {
 
 }
 
-#mainContent {
+#sideList h2{
+    margin: 0;
+    line-height: 2em
+}
+
+#mainContentGrid {
   grid-area: content;
+  display: grid;
+  grid-template-areas:
+  "info info info" ;
 }
 
 .contentBox {
     text-align: center;
-    width: 20em;
-    height: 10em;
+    height: 8em;
     position: relative;
     border: solid;
     border-radius: 25px;
-    margin-top: 5em;
-    margin-left: auto;
-    margin-right: auto;
     background-color: rgba(255, 255, 255, 0.5);
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+}
+
+#unitInfo{
+    grid-area: info;
+    margin: 1em 1em
+}
+
+#loginBox{
+    margin-top: 5em;
+    margin-left: 40%;
+    margin-right: 40%;
+    width: 20em;
 }
 
 .g-signin2{
