--- a/public/views/dashboard.html
+++ b/public/views/dashboard.html
@@ -37,7 +37,17 @@
     </div>
     <div id="mainContentGrid">
         <div id="unitInfo" class="contentBox">
-            Unit Info
+            <h2>Web Script</h2>
+            <button>Save</button>
+        </div>
+        <div id="lecture" class="contentBox">
+            <h2>Lectuers</h2>
+        </div>
+        <div id="practical" class="contentBox">
+            <h2>Practicals</h2>
+        </div>
+        <div id="resource" class="contentBox">
+            <h2>Resources</h2>
         </div>
     </div>
 
