--- a/public/views/dashboard.html
+++ b/public/views/dashboard.html
@@ -36,17 +36,20 @@
         </ul>
     </div>
     <div id="mainContentGrid">
-        <div id="unitInfo" class="contentBox">
+        <div id="unitInfo" class="contentBox ">
             <h2>Web Script</h2>
             <button>Save</button>
         </div>
-        <div id="lecture" class="contentBox">
+
+        <div id="lecture" class="contentBox mainContent">
             <h2>Lectuers</h2>
         </div>
-        <div id="practical" class="contentBox">
+
+        <div id="practical" class="contentBox mainContent">
             <h2>Practicals</h2>
         </div>
-        <div id="resource" class="contentBox">
+
+        <div id="resource" class="contentBox mainContent">
             <h2>Resources</h2>
         </div>
     </div>
