--- a/public/styles.css
+++ b/public/styles.css
@@ -1,6 +1,8 @@
 html * {
     font-family: 'Ubuntu', sans-serif;
 }
+
+
 body{
     height: 100vh;
     width: 100vw;
@@ -190,6 +192,12 @@ header ul li {
 #resource{
     grid-area: reso;
 }
+
+.textSection{
+    margin: 1em;
+    padding: 2em;
+    background-color: white;
+}
 #loginBox{
     margin-top: 5em;
     margin-left: 40%;
@@ -205,7 +213,12 @@ header ul li {
   margin: 0 auto;
 }
 
-
+.oneWeek{
+    height: 5em;
+}
+.twoWeeks{
+    height: 7em;
+}
 footer {
   grid-area: footer;
   background-color: #efefef;
