--- a/public/views/dashboard.html
+++ b/public/views/dashboard.html
@@ -5,6 +5,7 @@
 <meta name="google-signin-client_id" content="777537472432-8qni684qbrq6j911t6e2s94qo8kp6fia.apps.googleusercontent.com">
 <link rel="stylesheet" href="styles.css">
 <link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
+<link href="https://cdn.quilljs.com/1.3.6/quill.snow.css" rel="stylesheet">
 
 <div id="layoutGrid">
     <header>
@@ -33,6 +34,10 @@
                 </li>
             </li>
             <li id="sideTitle"><h2>Topics</h2></li>
+            <li class="oneWeek" ondragstart="dragStarted(event)" ondragover="draggingOver(event)" ondrop="dropped(event)" draggable="true">1</li>
+            <li class="twoWeeks" ondragstart="dragStarted(event)" ondragover="draggingOver(event)" ondrop="dropped(event)" draggable="true">2</li>
+            <li class="oneWeek" ondragstart="dragStarted(event)" ondragover="draggingOver(event)" ondrop="dropped(event)" draggable="true">3</li>
+            <li class="oneWeek" ondragstart="dragStarted(event)" ondragover="draggingOver(event) " ondrop="dropped(event)" draggable="true">4</li>
         </ul>
     </div>
     <div id="mainContentGrid">
@@ -43,14 +48,23 @@
 
         <div id="lecture" class="contentBox mainContent">
             <h2>Lectuers</h2>
+
         </div>
 
         <div id="practical" class="contentBox mainContent">
             <h2>Practicals</h2>
+            <div class-"textSection">
+                <div id="editor">
+
+                </div>
+            </div>
         </div>
 
         <div id="resource" class="contentBox mainContent">
             <h2>Resources</h2>
+            <div class-"textSection">
+
+            </div>
         </div>
     </div>
 
@@ -63,3 +77,9 @@
 
 <script src="../client.js"></script>
 <script>fillDashboard()</script>
+<script src="https://cdn.quilljs.com/1.3.6/quill.js"></script>
+<script>
+  var quill = new Quill('#editor', {
+    theme: 'snow'
+  });
+</script>
