--- a/public/views/dashboard.html
+++ b/public/views/dashboard.html
@@ -2,6 +2,7 @@
 <title>UPlanner</title>
 <script src="https://apis.google.com/js/platform.js" async defer></script>
 <script src="https://togetherjs.com/togetherjs-min.js"></script>
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="google-signin-client_id" content="777537472432-8qni684qbrq6j911t6e2s94qo8kp6fia.apps.googleusercontent.com">
 <link rel="stylesheet" href="styles.css">
 <link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
@@ -27,9 +28,9 @@
             <li><h2>My Units</h2><li>
                     <select>
                         <option value="">Webscript</option>
-                        <option value="saab">Webfun</option>
-                        <option value="mercedes">Webres</option>
-                        <option value="audi"></option>
+                        <option value="">Webfun</option>
+                        <option value="">Webres</option>
+                        <option value=""></option>
                     </select>
                 </li>
             </li>
