added edit/add page

--- a/public/views/dashboard.html
+++ b/public/views/dashboard.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<title>UPlanner</title>
+<title>UPlanner - Dashboard</title>
 <script src="https://apis.google.com/js/platform.js" async defer></script>
 <script src="https://togetherjs.com/togetherjs-min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -28,7 +28,7 @@
     <div id="sidebar">
         <ul id="sideList">
             <li><h2>My Units</h2><li>
-                    <select>
+                    <select id="units">
                         <option value="">Webscript</option>
                         <option value="">Webfun</option>
                         <option value="">Webres</option>
