--- a/public/styles.css
+++ b/public/styles.css
@@ -31,6 +31,56 @@ body{
 
 }
 
+#editGrid {
+  display: grid;
+
+  grid-template-areas:
+    "header"
+    "info"
+    "footer";
+  grid-template-columns: 1fr;
+  grid-template-rows: 10vh 1fr 3em;
+  margin: 0;
+  padding: 0;
+  height: 100vh;
+
+}
+#editUnitInfo{
+    margin: 0 33%;
+}
+
+#units{
+    padding: 0;
+    margin: 0;
+    width: 100%;
+    height: 100%;
+}
+
+#editUnitInfo input[type=text], select {
+    width: 100%;
+    padding: 12px 20px;
+    margin: 2em 0 5em 0;
+    display: inline-block;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+}
+
+#editUnitInfo input[type=submit] {
+    width: 100%;
+    background-color: #4296D2;
+    color: white;
+    padding: 14px 20px;
+    margin: 8px 0;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+}
+
+#editUnitInfo input[type=submit]:hover {
+    background-color: #1179B5;
+}
+
 header {
   grid-area: header;
   border-bottom: solid;
@@ -61,6 +111,9 @@ header ul li {
     height: inherit;
     display: inline-block;
     padding: 0;
+}
+#editUnitInfo{
+    grid-area: info;
 }
 
 .navButtons{
