add unit functionality

--- a/public/views/editUnit.html
+++ b/public/views/editUnit.html
@@ -40,7 +40,7 @@
         <lable for="uWeeks">Unit length</lable>
         <input type="number" id="uWeeks" placeholder="Weeks" />
 
-        <input type="submit" value="Add Unit">
+        <input type="submit" value="Add Unit" onclick="sendUnit()">
     </div>
 
 
