--- a/public/styles.css
+++ b/public/styles.css
@@ -170,14 +170,14 @@ header ul li {
   background-color: rgba(0,0,0,0.1);
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
 }
-#sideList{
+#sideList, #topicList{
     padding: 0;
     margin: 0;
     width: inherit;
     line-height: 2em
 }
 
-#sideList li{
+#sideList li, #topicList li{
     border: 0em;
     text-align: center;
     display: block;
@@ -188,11 +188,11 @@ header ul li {
 
 }
 
-#sideList li:hover{
+#topicList li:hover{
     background-color: rgba(0,0,0,0.2)
 }
 
-#sideList a {
+#sideList a, #sideList a  {
     height: 100%;
 
 }
