--- a/public/views/index.html
+++ b/public/views/index.html
@@ -4,6 +4,7 @@
 <script src="https://togetherjs.com/togetherjs-min.js"></script>
 <meta name="google-signin-client_id" content="777537472432-8qni684qbrq6j911t6e2s94qo8kp6fia.apps.googleusercontent.com">
 <link rel="stylesheet" href="styles.css">
+<link rel="shortcut icon" href="../images/uopLogo.png"/>
 <link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
 
 <div id="layoutGrid">
