--- a/public/styles.css
+++ b/public/styles.css
@@ -169,6 +169,8 @@ header ul li {
   border-right: solid;
   background-color: rgba(0,0,0,0.1);
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  overflow-x: auto;
+
 }
 #sideList, #topicList{
     padding: 0;
@@ -186,6 +188,10 @@ header ul li {
     box-sizing: content-box;
     border-bottom: solid;
 
+
+}
+#topicList li{
+    height: 6vh;
 }
 
 #topicList li:hover{
@@ -207,7 +213,7 @@ header ul li {
     grid-area: cont;
     display: flex;
     flex-wrap: wrap;
-    justify-content: center;
+    justify-content: left;
     padding: 0;
     margin: 0;
 }
@@ -241,7 +247,7 @@ header ul li {
 
 #unitInfo ul li {
     display: inline-block;
-    padding: 0;
+    padding: 0 1.5em;
 }
 #unitInfo select{
     margin-top:  0;
@@ -297,7 +303,7 @@ footer {
 }
 
 
-@media screen and (max-width:800px) and (min-width: 551px) {
+@media screen and (max-width:950px) and (min-width: 551px) {
     #layoutGrid {
       display: grid;
 
