--- a/public/views/dashboard.html
+++ b/public/views/dashboard.html
@@ -34,9 +34,7 @@
             </li>
             <li id="sideTitle"><h2>Topics</h2></li>
         </ul>
-        <ul id="topicList">
-
-        </ul>
+        <ul id="topicList"></ul>
 
 
     </div>
@@ -44,10 +42,11 @@
         <div id="unitInfo" class="contentBox ">
             <ul>
                 <li class="unitInfo"><h2 id="unitTitle">Loading</h2></li>
-                <li class="unitInfo"><a href="">Info</a></li>
+                <li class="unitInfo"><a href="">&#9432;</a></li>
+                <input type="submit"  class="topicInfo" value="Delete" onclick="" >
                 <input type="submit"  class="topicInfo" value="Save" onclick="sendTopic()" >
                 <li class="topicInfo">
-                    <label>Number of weeks</label>
+                    <label>Number of weeks:</label>
                     <input id="tWeeks" type="number" placeholder="Weeks"/>
                 </li>
                 <li class="topicInfo">
@@ -55,21 +54,16 @@
                         <option value="1">Oliver</option>
                     </select>
                 </li>
-                <li class="topicInfo"><input id="topicName" placeholder="Topic Name" /></li>
+                <li class="topicInfo">
+                    <label>Topic Name:</label>
+                    <input id="topicName" placeholder="Topic Name" />
+                </li>
             </ul>
         </div>
 
         <div id="mainContentFlex">
-            <div class="contentBox mainContent">
-                <h1>title</h1>
-                <div id="editor">
-                </div>
-            </div>
-            <div class="contentBox mainContent">
-                <h1>title</h1>
-            </div>
-            <div class="contentBox mainContent">
-                <h1>title</h1>
+            <div id="plusNote" class="contentBox mainContent">
+                <a onclick="addNote()">+</a>
             </div>
         </div>
 
@@ -77,12 +71,13 @@
         <p>805988 WEBSCRIPT COUSEWORK</p>
     </footer>
 </div>
+<template id="note">
+    <div class="contentBox mainContent">
+        <input />
+        <div id="editor"></div>
+    </div>
+</template>
 
 <script src="../client.js"></script>
 <script>fillDashboard()</script>
 <script src="https://cdn.quilljs.com/1.3.6/quill.js"></script>
-<script>
-  var quill = new Quill('#editor', {
-    theme: 'snow'
-  });
-</script>
