update unit backend

--- a/public/views/editUnit.html
+++ b/public/views/editUnit.html
@@ -42,6 +42,7 @@
         <input type="number" id="uWeeks" placeholder="Weeks" />
 
         <input type="submit" value="Add Unit" onclick="sendUnit()">
+        <input type="submit" value="Save Edits" onclick="updateTest()">
     </div>
 
 
