--- a/public/views/index.html
+++ b/public/views/index.html
@@ -14,7 +14,10 @@
         </ul>
     </header>
 
-    <div id="mainContent">
+    <div id="loginInfo">
+        <section class="contentBox"  id="loginBox">
+            <p>Welcome to UPlanner! UPlanner is a web application designed to assiest lectueres and educators to plan units.</p>
+        </section>
         <section class="contentBox" id="loginBox">
             <p>Please use the login buttton below to sign in with google.</p>
             <div class="g-signin2" data-onsuccess="onSignIn"></div>
