--- a/public/views/addUnit.html
+++ b/public/views/addUnit.html
@@ -27,21 +27,22 @@
     </header>
 
     <div id="editUnitInfo" class="contentBox">
-        <h1>Edit Unit</h1>
+        <h1>Add Unit</h1>
 
         <lable for="uName">Unit Name</lable>
-        <input type="text" id="uName" placeholder="Loading unit name..." />
+        <input type="text" id="uName" placeholder="Enter unit name" />
 
         <lable for="uSName">Unit short name</lable>
-        <input type="text" id="uSName" placeholder="Loading short name..." />
+        <input type="text" id="uSName" placeholder="Enter short name" />
 
         <lable for="uDesc">Unit Description</lable>
-        <input type="text" id="uDesc" placeholder="Loading Description..." />
+        <input type="text" id="uDesc" placeholder="Enter Description" />
 
         <lable for="uWeeks">Unit length</lable>
-        <input type="number" id="uWeeks" placeholder="Loading Weeks..." />
+        <input type="number" id="uWeeks" placeholder="Weeks" />
 
-        <input type="submit" id="saveEdits" value="Save Edits">
+        <input type="submit" value="Add Unit" onclick="sendUnit()">
+
     </div>
 
 
@@ -50,5 +51,5 @@
         <p>805988 WEBSCRIPT COUSEWORK</p>
     </footer>
 </div>
-<script src="../edit.js"></script>
+
 <script src="../client.js"></script>
