added delete unit/topic and unit validation

--- a/public/views/addUnit.html
+++ b/public/views/addUnit.html
@@ -30,18 +30,18 @@
         <h1>Add Unit</h1>
 
         <lable for="uName">Unit Name</lable>
-        <input type="text" id="uName" placeholder="Enter unit name" />
+        <input type="text" id="uName" placeholder="Enter unit name"/>
 
         <lable for="uSName">Unit short name</lable>
-        <input type="text" id="uSName" placeholder="Enter short name" />
+        <input type="text" id="uSName" placeholder="Enter short name"  />
 
         <lable for="uDesc">Unit Description</lable>
-        <input type="text" id="uDesc" placeholder="Enter Description" />
+        <input type="text" id="uDesc" placeholder="Enter Description"  />
 
         <lable for="uWeeks">Unit length</lable>
-        <input type="number" id="uWeeks" placeholder="Weeks" />
+        <input type="number" id="uWeeks" placeholder="Weeks"  />
 
-        <input type="submit" value="Add Unit" onclick="sendUnit()">
+        <input id="submitUnit" type="submit" value="Add Unit" onclick="sendUnit()"></a>
 
     </div>
 
@@ -53,3 +53,4 @@
 </div>
 
 <script src="../client.js"></script>
+<script src="../validation.js"></script>
