--- a/public/views/dashboard.html
+++ b/public/views/dashboard.html
@@ -41,7 +41,7 @@
                 <li class="unitInfo"><h2 id="unitTitle">Loading</h2></li>
                 <li class="unitInfo"><a onclick="editUnit()">&#9432;</a></li>
                 <li class="unitInfo"><input type="submit" value="Save" onclick="saveTopics()"></li>
-                <li class="topicInfo"><input type="submit" value="Delete" onclick=""></li>
+                <li class="topicInfo"><input type="submit" value="Delete" onclick="removeTopic()"></li>
                 <li class="topicInfo"><input type="submit" value="Add Note" onclick="addNote()"></li>
                 <li class="topicInfo" ><input type="submit" value="Save" onclick="addTopicToList()"></li>
                 <li class="topicInfo">
