--- a/public/views/index.html
+++ b/public/views/index.html
@@ -16,7 +16,7 @@
 
     <div id="loginInfo">
         <section class="contentBox"  id="loginBox">
-            <p>Welcome to UPlanner! UPlanner is a web application designed to assiest lectueres and educators to plan units.</p>
+            <p>Welcome to UPlanner! UPlanner is a web application designed to assist lectueres and educators to plan units.</p>
         </section>
         <section class="contentBox" id="loginBox">
             <p>Please use the login buttton below to sign in with google.</p>
