--- a/public/views/editUnit.html
+++ b/public/views/editUnit.html
@@ -42,6 +42,7 @@
         <input type="number" id="uWeeks" placeholder="Loading Weeks..." />
 
         <input type="submit" id="saveEdits" value="Save Edits">
+        <input type="submit" id="deleteUnit" value="Delete Unit">
     </div>
 
 
@@ -52,3 +53,4 @@
 </div>
 <script src="../edit.js"></script>
 <script src="../client.js"></script>
+<script src="../validation.js"></script>
