--- a/public/views/index.html
+++ b/public/views/index.html
@@ -28,4 +28,4 @@
         <p>805988 WEBSCRIPT COUSEWORK</p>
     </footer>
 </div>
-<script src="../client.js"></script>
+<script src="../scripts/client.js"></script>
