--- a/public/views/addUnit.html
+++ b/public/views/addUnit.html
@@ -19,7 +19,7 @@
                     <a>Settings</a>
                     <a onclick="TogetherJS(this); return false;">Collaborate</a>
                     <div class="g-signin2" data-onsuccess="onSignIn"></div>
-                    <a id="signOut" href="" onclick="signOut();">Logout</a>
+                    <a id="signOut" onclick="signOut();">Logout</a>
                 </div>
             </li>
             <li class="navButtons"><a href="dashboard.html">Dashboard</a></li>
@@ -33,18 +33,17 @@
         <input type="text" id="uName" placeholder="Enter unit name"/>
 
         <lable for="uSName">Unit short name</lable>
-        <input type="text" id="uSName" placeholder="Enter short name"  />
+        <input type="text" id="uSName" placeholder="Enter short name"/>
 
         <lable for="uDesc">Unit Description</lable>
-        <input type="text" id="uDesc" placeholder="Enter Description"  />
+        <input type="text" id="uDesc" placeholder="Enter Description"/>
 
         <lable for="uWeeks">Unit length</lable>
-        <input type="number" id="uWeeks" placeholder="Weeks"  />
+        <input type="number" id="uWeeks" placeholder="Weeks"/>
 
-        <input id="submitUnit" type="submit" value="Add Unit" onclick="sendUnit()"></a>
+        <input id="submitUnit" type="submit" value="Add Unit"></a>
 
     </div>
-
 
 
     <footer>
@@ -52,5 +51,6 @@
     </footer>
 </div>
 
-<script src="../client.js"></script>
-<script src="../validation.js"></script>
+<script src="../scripts/client.js"></script>
+<script src="../scripts/addUnit.js"></script>
+<script src="../scripts/validation.js"></script>
