--- a/public/views/editUnit.html
+++ b/public/views/editUnit.html
@@ -51,6 +51,6 @@
         <p>805988 WEBSCRIPT COUSEWORK</p>
     </footer>
 </div>
-<script src="../edit.js"></script>
-<script src="../client.js"></script>
-<script src="../validation.js"></script>
+<script src="../scripts/edit.js"></script>
+<script src="../scripts/client.js"></script>
+<script src="../scripts/validation.js"></script>
